[package]
name = "user_server"
version = "0.1.0"
authors = ["Aric Beagley <aric@parsonsbehlelab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
tokio = { version = "1.7.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.6", features = [] }
tonic = "0.4.3"
tonic-reflection = "0.1.0"

[build-dependencies]
tonic-build = "0.4.2"
